--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/password-strength": "^12.0.2",
     "@angular/animations": "^15.1.0",
     "@angular/cdk": "^15.1.0",
     "@angular/common": "^15.1.0",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@angular/service-worker": "^15.1.0",
+    "ngx-auth-firebaseui": "^7.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
