--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "^12.0.2",
+    "@angular-material-extensions/password-strength": "^12.1.0",
     "@angular/animations": "^15.2.2",
     "@angular/cdk": "^15.2.2",
     "@angular/common": "^15.2.2",
     "@angular/compiler": "^15.2.2",
     "@angular/core": "^15.2.2",
     "@angular/fire": "^7.5.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.2",
     "@angular/material": "^15.2.2",
     "@angular/platform-browser": "^15.2.2",
