--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "stripe": "^11.16.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0"
