add firebase frameworksBackend region

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,9 @@
     "ignore": [
       "**/.*"
     ],
+    "frameworksBackend": {
+      "region": "australia-southeast1"
+    },
     "headers": [
       {
         "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
