--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.2",
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.2",
+    "@cypress/schematic": "^2.5.0",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
@@ -39,6 +43,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "stripe": "^11.17.0",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "cypress": "latest"
   }
 }
