--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "ng test",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cy:first": "cypress run --config-file cy-first-user.json",
+    "cy:second": "cypress run --config-file cy-second-user.json",
+    "chat:open": "node ./cypress/pair/chat --open",
+    "chat:run": "node ./cypress/pair/chat"
   },
   "private": true,
   "dependencies": {
@@ -36,14 +40,17 @@
     "@angular/compiler-cli": "^15.2.2",
     "@cypress/schematic": "^2.5.0",
     "@types/jasmine": "~4.3.1",
+    "arg": "^5.0.2",
+    "cypress": "latest",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "stripe": "^11.17.0",
-    "typescript": "~4.9.5",
-    "cypress": "latest"
+    "typescript": "~4.9.5"
   }
 }
