--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0",
-    "stripe": "^11.16.0"
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.4.0",
+    "nodemailer": "^6.9.2",
+    "stripe": "^12.5.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.0.0"
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
