--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "^16.1.5",
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.6",
+    "@angular/localize": "^16.1.6",
     "@cypress/schematic": "^2.5.0",
     "@types/jasmine": "~4.3.1",
     "arg": "^5.0.2",
