--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,15 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "es": {
+            "translation": "src/locale/messages.es.xlf",
+            "baseHref": ""
+          }
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -16,6 +25,7 @@
             "outputPath": "dist/team-bldr",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "localize": true,
             "polyfills": [
               "zone.js"
             ],
