deploy localized versions to firebase

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,9 @@
     "ignore": [
       "**/.*"
     ],
+    "i18n": {
+      "root": "/"
+    },
     "frameworksBackend": {
       "region": "australia-southeast1"
     },
