--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/team-bldr",
+            "localize": true,
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
