--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,6 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/team-bldr",
-            "localize": true,
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -46,6 +45,7 @@
           },
           "configurations": {
             "production": {
+              "localize": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -66,7 +66,8 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "localize": false
             }
           },
           "defaultConfiguration": "production"
