--- a/angular.json
+++ b/angular.json
@@ -85,9 +85,15 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "ng-extract-i18n-merge:ng-extract-i18n-merge",
           "options": {
-            "browserTarget": "team-bldr:build"
+            "browserTarget": "team-bldr:build",
+            "format": "xlf",
+            "outputPath": "src/locale",
+            "targetFiles": [
+              "messages.es.xlf"
+            ],
+            "sourceFile": "../../messages.xlf"
           }
         },
         "test": {
