--- a/firebase.json
+++ b/firebase.json
@@ -54,7 +54,11 @@
     },
     "ui": {
       "enabled": true
-    }
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "singleProjectMode": true
   },
   "functions": [
     {
