--- a/angular.json
+++ b/angular.json
@@ -179,6 +179,7 @@
     "schematicCollections": [
       "@cypress/schematic",
       "@schematics/angular"
-    ]
+    ],
+    "analytics": false
   }
 }
